# QtCppPlayground

./: .gitignore  README.md
doc/: Qt_How_To.docx
projects/fifo/FifoDevelopment/: CMakeLists.txt  main.cpp
projects/fifo/FifoDevelopment/ring_buffer/: ring_buffer.h  ring_buffer.tpp
projects/house_market_calculator/HouseMarketCalculator/: CMakeLists.txt  CMakeLists.txt.user.20f8abe  CMakeLists.txt.user.66f6a93  house_market.cpp  house_market.h  house_market.ui  main.cpp
projects/house_market_calculator/misc/: izracun_donosa.py
projects/playing/PlayingAround/: CMakeLists.txt  main.cpp
projects/serial_port/SerialPort/: CMakeLists.txt  main.cpp
projects/serial_port/SerialPort/drivers/: serial.cpp  serial.h
